@@ -1,0 +1,49 @@
+**/TestBloomMapFile.java
+**/TestDelegationToken.java
+**/TestDoAsEffectiveUser.java
+**/TestHttpServer.java
+**/TestIndexedSort.java
+**/TestInMemoryNativeS3FileSystemContract.java
+**/TestInMemoryS3FileSystemContract.java
+**/TestINode.java
+**/TestIPC.java
+**/TestIPCServerResponder.java
+**/TestKosmosFileSystem.java
+**/TestLocalDirAllocator.java
+**/TestRecordIO.java
+**/TestRecordVersioning.java
+**/TestReflectionUtils.java
+**/TestRetryProxy.java
+**/TestRPC.java
+**/TestS3Credentials.java
+**/TestS3FileSystem.java
+**/TestSaslRPC.java
+**/TestSequenceFileSerialization.java
+**/TestTFileByteArrays.java
+**/TestTFileComparators.java
+**/TestTFile.java
+**/TestTFileJClassComparatorByteArrays.java
+**/TestTFileLzoCodecsByteArrays.java
+**/TestTFileLzoCodecsStreams.java
+**/TestTFileNoneCodecsByteArrays.java
+**/TestTFileNoneCodecsJClassComparatorByteArrays.java
+**/TestTFileNoneCodecsStreams.java
+**/TestTFileSeek.java
+**/TestTFileSeqFileComparison.java
+**/TestTFileSplit.java
+**/TestTFileStreams.java
+**/TestTFileUnsortedByteArrays.java
+**/TestTruncatedInputBug.java
+**/TestVersionedWritable.java
+**/TestWritableSerialization.java
+**/TestCLI.java
+**/TestFTPFileSystem.java
+**/TestDFSStorageStateRecovery.java
+**/TestDFSRollback.java
+**/TestDFSRename.java
+**/TestDFSMkdirs.java
+**/TestDFSFinalize.java
+**/TestFileCreationNamenodeRestart.java
+**/TestClientProtocolWithDelegationToken.java
+**/TestDelegationTokenAuthMethod.java
+**/TestNameNodeMetrics.java
